--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.2",
         "filament/filament": "^3.2",
+        "hekmatinasser/verta": "^8.4",
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9"
     },
